# fitdist

./: pyproject.toml
src/fitdist/: __init__.py  fit.py
